<resources>
    <string name="app_name">에그 로또</string>
    <string name="ad_mob_app_id">ca-app-pub-2713759975650849~3531955908</string>
    <!-- <string name="banner_ad_unit_id">ca-app-pub-2713759975650849/5205620914</string> -->
    <!-- <string name="interstitial_ad_unit_id">ca-app-pub-2713759975650849/1537784749</string> -->
    <string name="native_advanced_ad_unit_id">ca-app-pub-2713759975650849/6415512800</string>
    <!-- <string name="native_advanced_ad_unit_test_id">ca-app-pub-3940256099942544/2247696110</string> -->

    <string name="game_result_url">https://dhlottery.co.kr/gameResult.do?method=byWin</string>
    <string name="latest_winning_number">0000회 당첨결과(최신)</string>
    <string name="winning_number">회 당첨결과</string>
    <string name="recency">(최신)</string>
    <string name="winning_amount">당첨금액</string>
    <string name="generate_lotto_number">로또번호 생성</string>
    <string name="break_at_once">한번에 깨기</string>
    <string name="touch_to_break_egg">터치해서 알을 깨주세요.</string>
    <string name="winning_lotto_number">Winning lotto number</string>
    <string name="add">Add</string>
    <string name="generated_lotto_number">Generated lotto number</string>
    <string name="monetary_unit">원</string>
    <string name="winning_confirmation">당첨확인 (QR 코드)</string>
    <string name="scan_qr_code">QR 코드를 스캔하여 당첨을 확인하세요!</string>
    <string name="have_the_qr_code_in_the_square">QR 코드를 사각형 안에 비춰주세요.</string>
    <string name="failed_to_load_web_page">웹페이지를 불러오지 못했습니다.</string>
    <string name="options">옵션</string>
    <string name="sound_on">사운드 ON</string>
    <string name="sound_off">사운드 OFF</string>
    <string name="weekly_alarm_on">매주 알림 ON</string>
    <string name="weekly_alarm_off">매주 알림 OFF</string>
    <string name="time_to_check_winning_number">당첨결과를 확인할 시간입니다.</string>
    <string name="settings">설정</string>
    <string name="open_source_licenses">오픈소스 라이센스</string>
    <string name="icons_and_font_licenses">아이콘 및 폰트 라이센</string>
    <string name="failed_to_load_file">파일을 읽어오는데 실패했습니다.</string>
    <string name="splash_image">Splash Image</string>

    <string name="notice">알림</string>
    <string name="default_update_message">새로운 버전이 있습니다. 업데이트 하시겠습니까?</string>
    <string name="update">업데이트</string>
    <string name="exit">종료</string>
    <string name="later">나중에</string>
    <string name="message_new_version">새로운 버전이 있습니다. 업데이트 하시겠습니까?</string>
    <string name="ok">확인</string>
    <string name="exit_message">앱을 종료하시겠습니까?</string>
    <string name="write_review">리뷰 쓰기</string>
    <string name="failed_to_load_lotto_number">로또 번호를 읽어오는데 실패했습니다.</string>
    <string name="lucky_numbers">행운의 번호</string>
    <string name="today_horoscope">오늘의 운세</string>
    <string name="male">남자</string>
    <string name="female">여자</string>
    <string name="date_of_birth">생년월일</string>
    <string name="show_horoscope">운세보기</string>
    <string name="lunar_or_solar">음력/양력</string>
    <string name="my_lucky_numbers">내 행운의 숫자</string>
    <string name="delete">Delete</string>
    <string name="numbers_i_picked">내가 뽑은 번호들</string>
    <string name="gold_medal">Gold Medal</string>
    <string name="silver_medal">Silver Medal</string>
    <string name="bronze_medal">Bronze Medal</string>
    <string name="qr_code">QR 코드</string>
    <string name="store_numbers">번호 저장</string>
    <string name="share">공유하기</string>
    <string name="icon">Icon</string>
</resources>