<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorBackgroundDefault"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <FrameLayout
        android:id="@+id/frame_layout_generate_lotto_number"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginTop="24dp"
        android:background="@drawable/button_radius_background"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <Button
            android:id="@+id/button_generate_lotto_number"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="?attr/selectableItemBackground"
            android:gravity="center"
            android:padding="16dp"
            android:text="@string/generate_lotto_number"
            android:textSize="18sp" />

    </FrameLayout>

    <FrameLayout
        android:id="@+id/frame_layout_break_at_once"
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        android:layout_marginTop="4dp"
        android:layout_marginEnd="32dp"
        android:layout_marginBottom="4dp"
        android:background="@drawable/button_radius_background_yellow"
        app:layout_constraintBottom_toBottomOf="@+id/frame_layout_generate_lotto_number"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="@+id/frame_layout_generate_lotto_number">

        <Button
            android:id="@+id/button_break_at_once"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="?attr/selectableItemBackground"
            android:drawablePadding="8dp"
            android:drawableStart="@drawable/ic_baseline_whatshot_24"
            android:gravity="center"
            android:padding="8dp"
            android:text="@string/break_at_once"
            android:textSize="14sp" />

    </FrameLayout>

    <TextView
        android:id="@+id/text_view_request_touch"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginTop="8dp"
        android:gravity="center"
        android:padding="8dp"
        android:text="@string/touch_to_break_egg"
        android:textAppearance="@style/TextAppearance.AppCompat.Small"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/frame_layout_generate_lotto_number" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/recycler_view_eggs"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="16dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/text_view_request_touch" />

    <TextView
        android:id="@+id/text_view_lucky_numbers"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginTop="16dp"
        android:padding="8dp"
        android:text="@string/lucky_numbers"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/recycler_view_eggs" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/recycler_view_numbers"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="16dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/text_view_lucky_numbers" />

</androidx.constraintlayout.widget.ConstraintLayout>