<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:ads="http://schemas.android.com/apk/res-auto"
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:gravity="center_horizontal"
    android:background="@color/colorEggWhite">

    <TextView
        android:id="@+id/text_view_title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:padding="16dp"
        android:text="@string/exit_message"
        android:textSize="16sp"
        ads:layout_constraintEnd_toEndOf="parent"
        ads:layout_constraintStart_toStartOf="parent"
        ads:layout_constraintTop_toTopOf="parent" />

    <com.google.android.gms.ads.AdView
        android:id="@+id/ad_view"
        android:layout_width="300dp"
        android:layout_height="250dp"
        ads:adSize="MEDIUM_RECTANGLE"
        ads:adUnitId="@string/banner_ad_unit_id"
        ads:layout_constraintEnd_toEndOf="parent"
        ads:layout_constraintStart_toStartOf="parent"
        ads:layout_constraintTop_toBottomOf="@+id/text_view_title" />

    <LinearLayout
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        ads:layout_constraintEnd_toEndOf="parent"
        ads:layout_constraintStart_toStartOf="parent"
        ads:layout_constraintTop_toBottomOf="@+id/ad_view">

    <FrameLayout
        android:id="@+id/frame_layout_go_to_review"
        android:layout_width="0dp"
        android:layout_height="48dp"
        android:layout_margin="8dp"
        android:layout_marginBottom="8dp"
        android:layout_weight="1"
        android:background="@color/colorEggOrange"
        android:foreground="?attr/selectableItemBackground">

        <Button
            android:id="@+id/button_go_to_review"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:gravity="center"
            android:padding="8dp"
            android:text="@string/write_review"
            android:textSize="16sp" />

    </FrameLayout>

        <FrameLayout
            android:id="@+id/frame_layout_ok"
            android:layout_width="0dp"
            android:layout_height="48dp"
            android:layout_margin="8dp"
            android:layout_weight="1"
            android:layout_marginBottom="8dp"
            android:background="@color/colorEggOrange"
            android:foreground="?attr/selectableItemBackground">

            <Button
                android:id="@+id/button_ok"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:gravity="center"
                android:padding="8dp"
                android:text="@string/ok"
                android:textSize="16sp" />

        </FrameLayout>

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>